# agentframework-workshop

./: .gitignore  CLEANUP_SUMMARY.md  README.md  STRUCTURE.md  dotnet-runall.cmd  dotnet-runall.sh  python-runall.cmd  python-runall.sh
Backend/: .env.template  env.template
Backend/dotnet/: .gitignore  01-SingleAgent-Demo.ipynb  02-MultipleAgents-Demo.ipynb  03-ContentSafety-Demo.ipynb  04-LongRunningMemory-Demo.ipynb  05-MCP-Demo.ipynb  DotNetAgentFramework.csproj  DotNetAgentFramework.http  GlobalUsings.cs  MCP-README.md  Program.cs  README.md  agentframework.sln  appsettings.Development.json  appsettings.json  config.yml  workshop_dotnet_agent_framework.ipynb
Backend/dotnet/Agents/: AzureOpenAIGenericAgent.cs  BaseAgent.cs  BedrockHRAgent.cs  MicrosoftFoundryPeopleAgent.cs  (+3 more)
Backend/python/: .gitignore  01-SingleAgent-Demo.ipynb  02-MultipleAgents-Demo.ipynb  03-ContentSafety-Demo.ipynb  04-LongRunningMemory-Demo.ipynb  AGENT_ROLES.md  BEDROCK_GEMINI_SETUP.md  Dockerfile  RATE_LIMITING.md  README.md  app.py  config.yml  main.py  pyproject.toml  requirements.txt  test_agent_retrieval.py  test_agent_types.py  test_agents.py
Backend/python/agents/: __init__.py  aws_bedrock_agent_client.py  azure_openai_agent.py  base_agent.py  base_agent_new.py  bedrock_agent_new.py  ms_foundry_agent.py  openai_agent.py  specific_agents.py  user_info_memory.py
Backend/python/clients/: aws_bedrock_agent_client.py  aws_bedrock_client.py  google_gemini_client.py
Backend/python/core/: __init__.py  config.py  logging_config.py  observability.py
Backend/python/examples/: README.md  __init__.py  mcp_server.py  sample_rest_api.py
Backend/python/models/: __init__.py  chat_models.py
Backend/python/routers/: __init__.py  agents.py  chat.py  demo.py  mcp.py  safety.py
Backend/python/services/: __init__.py  agent_instructions_service.py  agent_service.py  agent_service_new.py  content_safety_service.py  group_chat_service.py  mcp_client_service.py  mcp_tool_function_factory.py  response_formatter_service.py  session_manager.py  workflow_orchestration_service.py
Backend/python/src/: __init__.py  main.py
Backend/python/src/agents/: __init__.py  base_agent.py  specific_agents.py
Backend/python/src/clients/: aws_bedrock_client.py  google_gemini_client.py
Backend/python/src/core/: config.py
Backend/python/src/models/: chat_models.py
Backend/python/src/routers/: agents.py  chat.py
Backend/python/src/services/: agent_service.py  group_chat_service.py  response_formatter_service.py  session_manager.py
docs/: AI_SERVICES.md  CONTENT_SAFETY.md  GROUP_CHAT.md  INSTALL.md  PROMPTS.md  START.md
frontend/: package-lock.json  package.json  verify-fix.js  verify-safety-ui.js
frontend/public/: index.html
frontend/src/: App.css  App.js  SafetyTester.js
(+58 files in other folders)
